Vertaling fixt, add shift mooi maken

--- a/shiften/static/shiften/css/shiftlist.css
+++ b/shiften/static/shiften/css/shiftlist.css
@@ -1,13 +1,13 @@
-.header {
+.main-header {
     display: flex;
     margin-top: 1rem;
 }
 
-.header>* {
+.main-header>* {
     margin: 0;
 }
 
-.header .add-shift-btn {
+.main-header .add-shift-btn {
     margin-left: 1rem;
     padding: 0.4rem;
 }
@@ -127,7 +127,7 @@ dialog ul {
     /* cursor: pointer; */
     background-color: var(--body-bg);
     color: var(--body-color);
-    font-size: 1.4rem;
+    font-size: 1.25rem;
     padding: 0.3em;
     margin-bottom: 0.5rem;
 }
@@ -136,4 +136,26 @@ dialog ul {
     margin-right: 1.25rem;
     /* background-color: var(--accent); */
     /* padding: 0.4rem; */
+}
+
+.shift-create-popup h1 {
+    margin-top: 0;
+}
+
+.shift-create-popup .opties label {
+    font-size: 1rem;
+}
+
+.shift-create-popup .opties input {
+    font-size: 1rem;
+    width: 8em;
+}
+
+.shift-create-popup .opties {
+    margin-bottom: 0;
+    display: grid;
+    grid-template-columns: auto auto;
+    row-gap: 1rem;
+    column-gap: 1rem;
+    margin-bottom: 1rem;
 }
